--- a/styles/main.css
+++ b/styles/main.css
@@ -728,63 +728,6 @@ body {
   color: #666a6e;
 }
 
-/*----------BURGER-MENU---------*/
-
-.modal-mobile {
-  max-width: 100%;
-  background-color: #f3f3f3;
-  text-align: center;
-  position: absolute;
-  top: -525px;
-  left: 0;
-  right: 0;
-  margin: 0.26vw auto 0;
-  padding: 2.08vw 0.78vw 1.04vw;
-  box-sizing: border-box;
-}
-.modal-mobile .logo-header {
-  margin-top: 0vw;
-}
-.modal-mobile .header-nav {
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 2.08vw;
-  margin: 0 auto;
-  margin-left: 0;
-  text-align: left;
-  margin-top: 1.56vw;
-  margin-bottom: 2.08vw;
-  padding: 0;
-}
-.modal-mobile .header-nav li:nth-child(2) {
-  width: 100%;
-  padding: 1.04vw 0;
-  border-top: 0.05vw solid #cbcdcf;
-  border-bottom: 0.05vw solid #cbcdcf;
-}
-.modal-mobile .social {
-  justify-content: flex-end;
-  margin-bottom: 3.13vw;
-}
-.modal-mobile .banner-link {
-  margin: 0;
-  padding: 1.15vw 326.4px;
-  max-width: 18.75vw;
-}
-.burger-close {
-  width: 1.15vw;
-  height: 1.15vw;
-  background-color: transparent;
-  background-image: url(../images/close.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  top: 2.08vw;
-  right: 1.04vw;
-}
-
 /*-------------MODAL--------------*/
 
 .popup {
@@ -1670,6 +1613,74 @@ body {
     box-shadow: 0vw 0.91vw 2.34vw -1.3vw #fbf138;
     margin: 3.39vw auto;
   }
+
+  /*----------BURGER-MENU---------*/
+
+.modal-mobile {
+  max-width: 100%;
+  background-color: #f3f3f3;
+  text-align: center;
+  position: absolute;
+  top: -570px;
+  left: 0;
+  right: 0;
+  margin: 4.99px auto 0;
+  padding: 39.94px 14.98px 19.97px;
+  box-sizing: border-box;
+}
+.modal-mobile .logo-header {
+  margin-top: 0px;
+}
+.modal-mobile .header-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 39.94px;
+  margin: 0 auto;
+  margin-left: 0;
+  text-align: left;
+  margin-top: 29.95px;
+  margin-bottom: 39.94px;
+  padding: 0;
+}
+.modal-mobile .header-nav li:nth-child(2) {
+  width: 100%;
+  padding: 19.97px 0;
+  border-top: 1px solid #cbcdcf;
+  border-bottom: 1px solid #cbcdcf;
+}
+.modal-mobile .social {
+  justify-content: flex-end;
+  margin-bottom: 60.13px;
+}
+.modal-mobile .inst{
+  width: 26px;
+  height: 26px;
+
+}
+.modal-mobile .fb{
+  width: 26px;
+  height: 26px;
+
+}
+.modal-mobile .banner-link {
+  margin: 0;
+  padding: ;
+  max-width: 360.04px;
+}
+.burger-close {
+  width: 22.12px;
+  height: 22.12px;
+  background-color: transparent;
+  background-image: url(../images/close.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 39.94px;
+  right: 19.97px;
+}
 }
 
 @media (min-width: 769px) {
